[package]
name = "env-vars-to-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
serde_json = "1.0.96"
thiserror = "1.0.40"

[dev-dependencies]
rstest = "0.17.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
