[package]
name = "env-vars-to-json"
version = "0.1.3"
authors = [
    "Hieu Minh Nguyen <hieunguyenvn98@gmail.com>"
]
description = "Convert environment variables to JSON"
keywords = ["env", "vars", "json"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/therealhieu/env-vars-to-json"
edition = "2021"

[dependencies]
derive_builder = "0.12.0"
regex = { version = "1.8.3", optional = true }
serde_json = "1.0.96"
thiserror = "1.0.40"

[dev-dependencies]
rstest = "0.17.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"

[features]
filter = ["dep:regex"]
preserve_order = ["serde_json/preserve_order"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
